--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-  	<a href="/elresume.pdf">Eric's Resume</a>
+  	<a href="/elresume2.pdf">Eric's Resume</a>
   </small>
   <nav>
   	<ul>
