--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,12 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   	<div class="navbar-inner">
   	  <div class="container">
-  	    <%= link_to "Eric", 'http://www.linkedin.com/in/ericlachenmeier', id: "logo" %>
+  	    <%= link_to "Linkedin", 'http://www.linkedin.com/in/ericlachenmeier', id: "logo" %>
   	    <nav>
   	  	  <ul class="nav pull-right">
   	  	    <li><%= link_to "Home",      root_path %></li>
   	  	    <li><%= link_to "Help",      help_path %></li>
-  	  	    <li><%= link_to "Sign in",   '#' %></li>
+  	  	    <!--<li><%= link_to "Sign in",   '#' %></li>-->
   	  	  </ul>
   	    </nav>
   	  </div>
