--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,8 +2,8 @@
 <div class="center hero-unit">
 	<h1>Eric Lachenmeier's Home Page</h1>
 <p>
-  This is Eric's home page for the
+  This is the home page for 
   <a href="https://calm-peak-8812.herokuapp.com/">Eric's RoR Tutorial</a>
-  sample application.
+  sample application
 </p>
 </div>
