--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,10 +2,21 @@
 
 /* hero-unit */
 
+html, 
+body {
+	margin:0;
+	padding:0;
+	height: 100%
+}
 
 body {
+	margin:0;
 	padding-top: 70px;
-
+	height: 100%;
+}
+#wrapper {
+	min-height:100%;
+	position:relative;
 }
 
 .hero-unit {
@@ -98,7 +109,18 @@ p{
 /* footer */
 
 footer {
+	width: 945px; 
+	float: right;
+	height: 10px;
+	position: absolute;
+	bottom:0;
+	left:0;
+	right:0;
+
 	margin-top: 1px;
+	margin-bottom: 90px;
+	margin-left: 240px;
+	margin-right: 0px;
 	padding-top: 1px;
 	border-top: 2px solid #eaeaea;
 	color: #999;
