--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -15,8 +15,10 @@ body {
 	height: 100%;
 }
 #wrapper {
-	min-height:100%;
-	position:relative;
+	padding: 0px;
+	margin: auto;
+	width: 100%;
+	height: 100%;
 }
 
 .hero-unit {
@@ -109,21 +111,15 @@ p{
 /* footer */
 
 footer {
-	width: 945px; 
-	float: right;
-	height: 10px;
-	position: absolute;
-	bottom:0;
-	left:0;
-	right:0;
-
-	margin-top: 1px;
-	margin-bottom: 90px;
-	margin-left: 240px;
-	margin-right: 0px;
-	padding-top: 1px;
-	border-top: 2px solid #eaeaea;
+    bottom: 0;
+    position: fixed;
+    width: 940px;
+	margin-top: 25px;
+	padding-top: 5px;
+	border-top: 1px solid #eaeaea;
 	color: #999;
+	text-align: center;
+	
 }
 
 footer a {
